# foundry-hosted-agentframework-demo

./: .dockerignore  .env.sample  AGENTS.md  README.md  agent.yaml  azure.yaml  call_deployed_agent.py  main.py  pyproject.toml  stage0_local_agent.py  stage1_foundry_model.py  stage2_foundry_iq.py  stage2_foundry_iq_retrieve.py  stage3_foundry_toolbox.py  todo.md  workflow.py  write_dot_env.ps1  write_dot_env.sh
infra/: create-search-indexes.py  create-toolbox.py  main.bicep  main.parameters.json
infra/core/ai/: ai-project.bicep
infra/core/search/: azure_ai_search.bicep
infra/hooks/: postdeploy.ps1  postdeploy.sh  postprovision.ps1  postprovision.sh  write_dot_env.ps1  write_dot_env.sh
scripts/: kb_mcp_response.json  quality_eval.py  red_team_scan.py  scheduled_eval.py  scheduled_red_team.py  test_kb_mcp.sh
workflows/: .dockerignore  pyproject.toml
